added list name

--- a/test/rest.html
+++ b/test/rest.html
@@ -7,8 +7,8 @@
  <body>
 
  <script type="text/javascript">
- function getListItemById(webUrl,listName, itemId, success, failure) {
-    var url = webUrl + "/_vti_bin/listdata.svc/" + listName + "(" + itemId + ")";
+ function getListItemById(webUrl, Load-Test-Request-Form-List, itemId, success, failure) {
+    var url = webUrl + "/_vti_bin/listdata.svc/" + Load-Test-Request-Form-List + "(" + itemId + ")";
     $.ajax({
         url: url,
         method: "GET",
